--- a/src/test/resources/config/application.properties
+++ b/src/test/resources/config/application.properties
@@ -27,7 +27,7 @@ webdriver.starting.url = about:blank
 #optional. The number of start  attempts webdriver. 3 by default
 webdriver.create.attempts = 3
 
-webdriver.chrome.capability.args = --start-maximized 
+webdriver.chrome.capability.args =--disable-popup-blocking
 
 #Optional. Test data management
 ## Data type
